fix max-wdith for higher ed banner on home page

--- a/src/app/components/buckets/buckets.scss
+++ b/src/app/components/buckets/buckets.scss
@@ -4,7 +4,11 @@
 .buckets-section {
     margin: 0 auto;
     max-width: $boxed-width;
-    padding: 8rem 1.5rem;
+    padding: 1.5rem;
+
+    @include desktop {
+        padding: 8rem 1.5rem;
+    }
 
     .bucket {
         color: color(neutral-lightest);
