--- a/src/app/pages/home/education/education.hbs
+++ b/src/app/pages/home/education/education.hbs
@@ -2,36 +2,38 @@
     @import url(/app/pages/home/education/education.css);
 </style>
 <div class="education-banner">
-    <div class="square-1"></div>
-    <div class="square-2"></div>
+    <div class="container">
+        <div class="square-1"></div>
+        <div class="square-2"></div>
 
-    <div class="quote">
-        <span class="opening">When it comes to education,</span>
-        <strong>there should be no limits.</strong>
-        <span class="blurb">
-            Our high-quality educational tools give students the access
-            to the learning materials they need to succeed, at little to no
-            cost. Because we don't believe anything should come
-            between students and their future.
-        </span>
-    </div>
+        <div class="quote">
+            <span class="opening">When it comes to education,</span>
+            <strong>there should be no limits.</strong>
+            <span class="blurb">
+                Our high-quality educational tools give students the access
+                to the learning materials they need to succeed, at little to no
+                cost. Because we don't believe anything should come
+                between students and their future.
+            </span>
+        </div>
 
-    <div class="student"></div>
+        <div class="student"></div>
 
-    <div class="links">
-        <ul>
-            <li>
-                <a class="btn btn-large btn-orange higher-ed" href="/higher-ed">
-                    <span class="title">Higher Education</span>
-                    <span class="blurb">Free, peer-reviewed college textbooks</span>
-                </a>
-            </li>
-            <li>
-                <a class="btn btn-large btn-yellow k-12" href="/k-12">
-                    <span class="title">K-12</span>
-                    <span class="blurb">Adapative learning courseware and textbooks for AP<sup>&reg;</sup> courses</span>
-                </a>
-            </li>
-        </ul>
+        <div class="links">
+            <ul>
+                <li>
+                    <a class="btn btn-large btn-orange higher-ed" href="/higher-ed">
+                        <span class="title">Higher Education</span>
+                        <span class="blurb">Free, peer-reviewed college textbooks</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="btn btn-large btn-yellow k-12" href="/k-12">
+                        <span class="title">K-12</span>
+                        <span class="blurb">Adapative learning courseware and textbooks for AP<sup>&reg;</sup> courses</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
