--- a/src/app/components/shell/footer/footer.hbs
+++ b/src/app/components/shell/footer/footer.hbs
@@ -18,6 +18,9 @@
                     <a href="/accessibility-statement">Accessibility Statement</a>
                 </li>
                 <li>
+                    <a href="https://github.com/openstax">Open Source Code</a>
+                </li>
+                <li>
                     <a href="/contact">Contact</a>
                 </li>
             </ul>
