--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -46,7 +46,7 @@
                 <blockquote>
                     <div id="endorsement"></div>
                         <p class="attribution">
-                                &mdash; <span id="attribution"></span>
+                                <span>&mdash; <span id="attribution"></span></span>
                                 <span id="attribution-school"></span>
                         </p>
 
