--- a/src/styles/variables/colors.scss
+++ b/src/styles/variables/colors.scss
@@ -21,6 +21,8 @@ $os-colors: (
     @return null;
 }
 
+$text-dark: #424242;
+
 // OpenStax Grayscale Scheme
 $neutral-colors: (
     darkest: black,
