--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -256,7 +256,6 @@
 
             @include desktop {
                 margin-left: 7.5rem;
-
             }
 
             &::before {
@@ -276,25 +275,40 @@
             }
 
             p {
-                font-size: 2.4rem;
+                font-size: 3.2rem;
                 font-weight: 500;
                 font-style: italic;
-                margin: 0;
+                letter-spacing: -0.15rem;
+                line-height: 5rem;
+                margin: 0 0 3rem;
 
-                @include desktop {
-                    font-size: 3.2rem;
+                @include phone {
+                    font-size: 2.6rem;
+                    letter-spacing: -0.1rem;
+                    line-height: 4rem;
+                }
+
+                @include tablet {
+                    font-size: 2.9rem;
+                    letter-spacing: -0.1rem;
+                    line-height: 4.5rem;
                 }
             }
 
             .attribution {
-                display: inline-block;
-                font-size: 1.6rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-end;
+                font-size: 2.1rem;
+                letter-spacing: normal;
+                line-height: 2.5rem;
                 margin-top: 2.5rem;
                 text-align: right;
 
-
-                @include desktop {
-                    font-size: 2.2rem;
+                @include phone {
+                    font-size: 1.7rem;
+                    line-height: 2rem;
+                    margin-top: 2rem;
                 }
             }
         }
