--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@ html {
 }
 
 body {
+    color: $text-dark;
     display: flex;
     flex-direction: column;
     font-size: 1.4rem;
@@ -39,22 +40,6 @@ sup {
     flex-direction: column;
     margin: 0 auto;
     max-width: 120rem;
-}
-
-.hero {
-    font-size: 1.7rem;
-    font-weight: 100;
-    letter-spacing: 0.11rem;
-    padding: 5rem 10rem;
-    text-align: center;
-
-    h1 {
-        font-weight: bold;
-        font-size: 6rem;
-        letter-spacing: -0.1rem;
-        line-height: 5.5rem;
-        margin-bottom: 3rem;
-    }
 }
 
 .go-to {
