--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,8 @@ body {
     color: $text-dark;
     display: flex;
     flex-direction: column;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
+    line-height: 2.5rem;
     margin: 0;
     min-height: 100vh;
 }
@@ -26,6 +27,10 @@ body {
 a {
     color: color(primary);
     text-decoration: none;
+}
+
+p {
+    margin-bottom: 1rem;
 }
 
 sup {
