Fix get this title fixed menu on details page
when navigating several pages and then returning to the details page,
the fixed menu would become very laggy due to brower painting. now use css
to determine the position at which the menu stops scrolling.
I also updated the onload fade-in globally to prevent content from showing unstyled
on page load.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -76,12 +76,17 @@ sup {
     overflow: hidden;
 }
 
-#main {
+#main > *,
+.page-header,
+#footer {
     animation: fadeIn ease-in 1;
     animation-delay: 0.2s;
-    animation-duration: 0.5s;
+    animation-duration: 0.1s;
     animation-fill-mode: forwards;
     opacity: 0;
+}
+
+#main {
     padding-top: 6rem;
 
     @include desktop {
