--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -72,7 +72,6 @@
         display: flex;
         margin: 0 auto;
         padding: 0 1.5rem;
-        position: relative;
         max-width: $boxed-width;
         flex-flow: column nowrap;
 
@@ -142,6 +141,19 @@
                 transform: translate3d(-50%, 0, 0);
                 z-index: 1;
                 margin-bottom: 0;
+            }
+
+            &.bottom {
+                position: absolute;
+                bottom: 0;
+                top: auto;
+
+                .box {
+                    position: relative;
+                    top: 0;
+                    left: calc(100% - 25rem);
+                    right: auto;
+                }
             }
 
             .box {
