--- a/src/app/pages/finished-no-verify/finished-no-verify.hbs
+++ b/src/app/pages/finished-no-verify/finished-no-verify.hbs
@@ -1,5 +1,11 @@
-<h1>Thanks.</h1>
-<p>
-    If you need faculty-only resources, you will need to get your account
-    verified.
-</p>
+<style scoped>@import url(/app/pages/finished-no-verify/finished-no-verify.css);</style>
+<div class="finished-no-verify page">
+    {{{strips}}}
+    <div class="boxed">
+        <h1>Thanks.</h1>
+        <p>
+            If you need faculty-only resources, you will need to get your account
+            verified.
+        </p>
+    </div>
+</div>
