--- a/src/app/components/shell/footer/footer.hbs
+++ b/src/app/components/shell/footer/footer.hbs
@@ -1,63 +1,65 @@
 <style scoped>@import url(/app/components/shell/footer/footer.css);</style>
 <footer class="footer">
-    <div class="hero-quote">Access. The Future of Education.</div>
+    <div class="boxed">
+        <div class="hero-quote">Access. The Future of Education.</div>
 
-    <div class="copyright">
-        <ul>
-            <!--<li>
-                <a href="/news">News</a>
-            </li>-->
-            <li>
-                <a href="/license">Licensing</a>
-            </li>
-            <li>
-                <a href="/tos">Terms of Use</a>
-            </li>
-            <li>
-                <a href="/accessibility-statement">Accessibility Statement</a>
-            </li>
-            <li>
-                <a href="/contact">Contact</a>
-            </li>
-        </ul>
+        <div class="copyright">
+            <ul>
+                <!--<li>
+                    <a href="/news">News</a>
+                </li>-->
+                <li>
+                    <a href="/license">Licensing</a>
+                </li>
+                <li>
+                    <a href="/tos">Terms of Use</a>
+                </li>
+                <li>
+                    <a href="/accessibility-statement">Accessibility Statement</a>
+                </li>
+                <li>
+                    <a href="/contact">Contact</a>
+                </li>
+            </ul>
 
-        <p>
-            Supported by William &amp; Flora Hewlett Foundation,
-            Bill &amp; Melinda Gates Foundation, 20 Million Minds
-            Foundation, Maxfield Foundation, Open Society Foundations,
-            and Rice University.
-        </p>
+            <p>
+                Supported by William &amp; Flora Hewlett Foundation,
+                Bill &amp; Melinda Gates Foundation, 20 Million Minds
+                Foundation, Maxfield Foundation, Open Society Foundations,
+                and Rice University.
+            </p>
 
-        <p>
-            &copy; 1999-2015, Rice University. Except where otherwise noted,
-            content created on this site is licensed under a Creative
-            Commons Attribution 4.0 License.
-        </p>
+            <p>
+                &copy; 1999-2015, Rice University. Except where otherwise noted,
+                content created on this site is licensed under a Creative
+                Commons Attribution 4.0 License.
+            </p>
 
-        <p>
-            Advanced Placement<sup>&reg;</sup> and AP<sup>&reg;</sup> are trademarks registered and/or
-            owned by the College Board, which was not involved in the
-            production of, and does not endorse, this site.
-        </p>
-    </div>
+            <p>
+                Advanced Placement<sup>&reg;</sup> and AP<sup>&reg;</sup> are trademarks registered and/or
+                owned by the College Board, which was not involved in the
+                production of, and does not endorse, this site.
+            </p>
+        </div>
 
-    <div class="social">
-        <ul>
-            <li>
-                <a class="btn btn-focus-yellow btn-social facebook" href="https://www.facebook.com/openstax" title="facebook">
-                    Facebook
-                </a>
-            </li>
-            <li>
-                <a class="btn btn-focus-yellow btn-social twitter" href="https://twitter.com/openstax" title="twitter">
-                    Twitter
-                </a>
-            </li>
-            <li>
-                <a class="btn btn-focus-yellow btn-social linkedin" href="https://www.linkedin.com/company/openstax" title="linkedin">
-                    LinkedIn
-                </a>
-            </li>
-        </ul>
+        <div class="social">
+            <ul>
+                <li>
+                    <a class="btn btn-focus-yellow btn-social facebook" href="https://www.facebook.com/openstax" title="facebook">
+                        Facebook
+                    </a>
+                </li>
+                <li>
+                    <a class="btn btn-focus-yellow btn-social twitter" href="https://twitter.com/openstax" title="twitter">
+                        Twitter
+                    </a>
+                </li>
+                <li>
+                    <a class="btn btn-focus-yellow btn-social linkedin" href="https://www.linkedin.com/company/openstax" title="linkedin">
+                        LinkedIn
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </footer>
