--- a/src/app/pages/finished-verify/finished-verify.hbs
+++ b/src/app/pages/finished-verify/finished-verify.hbs
@@ -1,7 +1,13 @@
-<h1>Thanks.</h1>
-<p>
-    We manually verify that you are a faculty member and this process can take
-    up to three business days. You will receive an email notification once we
-    have confirmed your faculty status. Until then, you won’t be able to
-    download faculty-only materials.
-</p>
+<style scoped>@import url(/app/pages/finished-verify/finished-verify.css);</style>
+<div class="finished-verify page">
+    {{{strips}}}
+    <div class="boxed">
+        <h1>Thanks.</h1>
+        <p>
+            We manually verify that you are a faculty member and this process can take
+            up to three business days. You will receive an email notification once we
+            have confirmed your faculty status. Until then, you won’t be able to
+            download faculty-only materials.
+        </p>
+    </div>
+</div>
