fix responsive behavior on home page & h1 alignment on details page

--- a/src/app/pages/404/404.hbs
+++ b/src/app/pages/404/404.hbs
@@ -1,8 +1,7 @@
-<style scoped>@import url(/app/pages/404/404.css);</style>
-<div class="not-found page">
+<div class="not-found no-style page">
     {{{strips}}}
     <div class="boxed">
-        <h1>Page not found</h1>
+        <h1>Uh-oh, no page here</h1>
         <p>
             Kudos on your desire to explore! Unfortunately, we don't have a page to go
             with that particular location.
