--- a/src/app/pages/finished-no-verify/finished-no-verify.hbs
+++ b/src/app/pages/finished-no-verify/finished-no-verify.hbs
@@ -1,5 +1,4 @@
-<style scoped>@import url(/app/pages/finished-no-verify/finished-no-verify.css);</style>
-<div class="finished-no-verify page">
+<div class="finished-no-verify no-style page">
     {{{strips}}}
     <div class="boxed">
         <h1>Thanks.</h1>
