Updated copy, 20mm logo and made foundation logos links to foundation

--- a/src/app/components/quotes/quotes.hbs
+++ b/src/app/components/quotes/quotes.hbs
@@ -8,7 +8,7 @@
             <blockquote>
                 We’re recruiting for our Fall 2016 pilot of Concept Coach!
             </blockquote>
-            <a class="btn btn-orange" href="http://cc.openstax.org">Learn More</a>
+            <a class="btn btn-orange" href="/contact?subject=OpenStax Tutor Pilot Sign-up">Sign up for info</a>
         </div>
     </div>
 
