--- a/src/app/pages/higher-ed/higher-ed.hbs
+++ b/src/app/pages/higher-ed/higher-ed.hbs
@@ -34,7 +34,7 @@
                 <li class="step">
                     <div class="title">Create a Faculty Account</div>
                     <div class="blurb">
-                        We provide additional free faculty-only resources
+                        We provide additional free instructor-only resources
                         like test banks and solution manuals to plan your
                         course.
                     </div>
@@ -60,7 +60,7 @@
                     of OpenStax textbooks at your institution, we are here to
                     support you!
                 </div>
-                <div class="more"><a href="/contact?subject=College/University Partnerships">Learn More</a></div>
+                <div class="more"><a href="/contact?subject=College/University Partnerships">Contact Us</a></div>
             </div>
         </div>
 
