--- a/src/app/pages/k-12/tutor/tutor.hbs
+++ b/src/app/pages/k-12/tutor/tutor.hbs
@@ -11,7 +11,7 @@
                 learning to create a personalized learning experience that
                 empowers students to succeed.
             </span>
-            <a class="btn btn-orange" href="/allies">Learn more</a>
+            <a class="btn btn-orange" href="http://k12.openstax.org">Learn more</a>
         </div>
     </div>
 </div>
