Make K12 page book link point at AP books
Adjusted product-boxes to accept templateHelpers, adjusted template to
conditionally append a particular subject to the book subjects link.

--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -7,7 +7,7 @@
     <nav class="meta-nav">
         <div class="container">
             <ul class="nav-menu meta-menu" role="menu" aria-label="Meta navigation menu">
-                <li class="nav-menu-item"><a href="/about-us" role="menuitem">About</a></li>
+                <li class="nav-menu-item"><a href="/about-us" role="menuitem">About Us</a></li>
                 <li class="nav-menu-item"><a href="/contact" role="menuitem">Contact</a></li>
                 <li class="nav-menu-item login"><a href="#" role="menuitem">Login</a>
                     <ul class="dropdown-menu" role="menu" aria-expanded="false" aria-label="User Menu">
