--- a/src/app/components/products-boxes/products-boxes.hbs
+++ b/src/app/components/products-boxes/products-boxes.hbs
@@ -9,7 +9,7 @@
             <div class="caption">
                 <h3 class="title">Our Books</h3>
                 <p class="blurb">Our college­ level textbooks for Advanced Placement® courses are peer-reviewed, completely free online, and will soon be available for a very low cost in print.</p>
-                <a class="btn" href="/subjects">Explore Our Subjects</a>
+                <a class="btn" href="/subjects{{#if subject}}/{{subject}}{{/if}}">Explore Our Subjects</a>
             </div>
         </div>
 
