Remove Resources introductory text, add accounts_id to finish-profile

--- a/src/app/pages/finish-profile/finish-profile.hbs
+++ b/src/app/pages/finish-profile/finish-profile.hbs
@@ -12,6 +12,7 @@
         <input type=hidden name="first_name" />
         <input type=hidden name="last_name" />
         <input type=hidden name="user_id" />
+        <input type=hidden name="Accounts_ID" />
     </div>
     <fieldset class="labeled-inputs">
         <label>
