K-12 page copy changes

--- a/src/app/components/quotes/quotes.hbs
+++ b/src/app/components/quotes/quotes.hbs
@@ -6,7 +6,7 @@
         <div class="image"></div>
         <div class="quote">
             <blockquote>
-                We’re recruiting for our Fall 2016 pilot of Concept Coach!
+              We’re recruiting for our Fall 2016 pilot of OpenStax Tutor!
             </blockquote>
             <a class="btn btn-orange" href="/contact?subject=OpenStax Tutor Pilot Sign-up">Sign up for info</a>
         </div>
