Make menus for last row of books position static
That forces the window to have room for them.

--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -158,6 +158,11 @@
             }
         }
 
+        .book-category:last-child .details,
+        .last-row .details {
+            position: static;
+        }
+
         .cover:hover .details {
             @include desktop {
                 overflow: initial;
