--- a/src/app/components/shell/footer/footer.scss
+++ b/src/app/components/shell/footer/footer.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
+    font-size: 1.4rem;
 
     @include desktop {
         text-align: center;
@@ -54,8 +55,16 @@
         flex-wrap: wrap;
         padding-bottom: 4rem;
 
+        ul {
+            margin: 0 0 4rem;
+        }
+
         li > a {
             padding: 1rem;
+        }
+
+        p {
+            margin: 0;
         }
     }
 
