move .blurbs under books on subjects page

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -152,6 +152,7 @@
                 position: absolute;
                 bottom: 0;
                 top: auto;
+                z-index: 0;
 
                 .box {
                     position: relative;
