--- a/src/app/pages/subjects/subjects.hbs
+++ b/src/app/pages/subjects/subjects.hbs
@@ -3,29 +3,30 @@
     @import url(https://fonts.googleapis.com/css?family=Lato:400,900);
 </style>
 <div class="subjects-page">
-    <div class="container" data-manager="page-description">
-    </div>
-    <div class="feature-block">
-        <div class="container">
-            <div class="blurb">
-                <h3 class="title" data-manager="ds1-head"></h3>
-                <p class="text" data-manager="ds1-body"></p>
-            </div>
-            <div class="blurb">
-                <h3 class="title" data-manager="ds2-head"></h3>
-                <p class="text" data-manager="ds2-body"></p>
-            </div>
-            <div class="blurb">
-                <h3 class="title" data-manager="ds3-head"></h3>
-                <p class="text" data-manager="ds3-body"></p>
-            </div>
-        </div>
-    </div>
+    <div class="container" data-manager="page-description"></div>
+
     <div class="books">
         {{{strips}}}
         <div class="filter">
             <div class="filter-buttons"></div>
         </div>
         <div class="container"></div>
+        <div class="feature-block">
+            <div class="container">
+                <h2>About Our Textbooks</h2>
+                <div class="blurb">
+                    <h3 class="title" data-manager="ds1-head"></h3>
+                    <p class="text" data-manager="ds1-body"></p>
+                </div>
+                <div class="blurb">
+                    <h3 class="title" data-manager="ds2-head"></h3>
+                    <p class="text" data-manager="ds2-body"></p>
+                </div>
+                <div class="blurb">
+                    <h3 class="title" data-manager="ds3-head"></h3>
+                    <p class="text" data-manager="ds3-body"></p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
