Home page copy updates
update home page copy
change our impact image on home page
fix rice logo spacing

--- a/src/app/pages/home/education/education.hbs
+++ b/src/app/pages/home/education/education.hbs
@@ -10,11 +10,12 @@
             <span class="opening">When it comes to education,</span>
             <strong>there should be no limits.</strong>
             <span class="blurb">
-                Our high-quality educational tools give students the access
-                to the learning materials they need to succeed, at little to no
-                cost. Because we don't believe anything should come
+                Our high-quality educational tools give students access
+                to the learning materials they need to succeed, at little
+                to no cost. Because we don’t believe anything should come
                 between students and their future.
             </span>
+            <a class="btn" href="/about-us">Learn more about OpenStax</a>
         </div>
 
         <div class="student"></div>
@@ -24,13 +25,13 @@
                 <li>
                     <a class="btn btn-large btn-orange higher-ed" href="/higher-ed">
                         <span class="title">Higher Education</span>
-                        <span class="blurb">Free, peer-reviewed college textbooks</span>
+                        <span class="blurb">Peer-reviewed textbooks and digital learning tools</span>
                     </a>
                 </li>
                 <li>
                     <a class="btn btn-large btn-yellow k-12" href="/k-12">
                         <span class="title">K-12</span>
-                        <span class="blurb">Adapative learning courseware and textbooks for AP<sup>&reg;</sup> courses</span>
+                        <span class="blurb">Adaptive learning courseware and open content</span>
                     </a>
                 </li>
             </ul>
