--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -403,6 +403,7 @@ $transition: 0.3s;
                 background: transparent;
                 border: 0;
                 transform: translate3d(0, 0, 0);
+                margin-left: 2rem;
 
             }
 
